package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_library")
load("@crates_io_index//:defs.bzl", "aliases", "all_crate_deps")

rust_library(
    name = "tree-sitter-miu",
    srcs = glob(["bindings/rust/*.rs"]),
    data = glob(["src/**/*.h", "src/**/*.c"]) + ["src/node-types.json"],
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True),
)
