[package]
name = "tree-sitter-miu"
description = "Miu grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "miu"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/miu-lang/miu"
edition = "2021"
license = "MPL-2.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.6"

[build-dependencies]
cc = "1.0"
